--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vitest/coverage-istanbul": "^3.1.1",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-tsdoc": "^0.4.0",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "lint-staged": "^15.5.0",
