--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "EUPL-1.2",
   "type": "module",
   "main": "dist/cjs/index.js",
+  "types": "dist/types/index.d.ts",
   "files": [
     "dist",
     "src"
@@ -40,6 +41,7 @@
     "typedoc-plugin-markdown": "^4.6.1",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vite-plugin-dts": "^4.5.3",
     "vitest": "^3.1.1"
   },
   "lint-staged": {
